@@ -54,6 +54,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Locale
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Map
 import|;
 end_import
@@ -400,6 +410,8 @@ operator|!=
 literal|null
 condition|)
 block|{
+try|try
+block|{
 name|encoding
 operator|=
 name|enValueOfFunc
@@ -409,9 +421,30 @@ argument_list|(
 name|en
 operator|.
 name|toUpperCase
-argument_list|()
+argument_list|(
+name|Locale
+operator|.
+name|ENGLISH
+argument_list|)
 argument_list|)
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalArgumentException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"Invalid/unsupported encoding option specified: "
+operator|+
+name|en
+argument_list|)
+throw|;
+block|}
 name|Preconditions
 operator|.
 name|checkArgument
