@@ -605,6 +605,8 @@ Release 2.7.0 - UNRELEASED
     HADOOP-11589. NetUtils.createSocketAddr should trim the input URI.
     (Rakesh R via ozawa)
 
+    HADOOP-11600. Fix up source codes to be compiled with Guava 17.0. (ozawa)
+
   OPTIMIZATIONS
 
     HADOOP-11323. WritableComparator#compare keeps reference to byte array.
